# DGTU-SPRING2025

./: .gitignore  README.MD  docker-compose.yaml  docker-compose.yml  выфв.html
backend/: Dockerfile  Makefile  README.MD  pyproject.toml
backend/config/: config.toml  test_config.toml
backend/src/: place_probabilities.py  race_simulator.py  socketio_room.py
backend/src/application/: calculate_probabilities.py  race_chart_generator.py  race_simulate.py
backend/src/application/race/: get_last_ten_races_handler.py  place_probability.py
backend/src/application/runner/: get_all_runners_handler.py  update_parameters_handler.py
backend/src/application/runner/common/: errors.py
backend/src/core/: config.py
backend/src/core/di/: container.py
backend/src/core/di/providers/: db.py  handlers.py  readers.py  redis_provider.py  repositories.py  services.py  settings.py  uow.py
backend/src/infrastructure/db/alembic/: env.py
backend/src/infrastructure/db/alembic/versions/: 45c026c5a1f6_.py  870b98d95a0e_.py
backend/src/infrastructure/db/models/: __init__.py  race.py  runner.py  secondary.py  student.py
backend/src/infrastructure/db/readers/: client_reader.py  race_reader.py
backend/src/infrastructure/db/repositories/: runner_repo.py
backend/src/presentation/web_api/: config.py  exceptions.py  main.py  middlwares.py  responses.py
backend/src/presentation/web_api/gunicorn/: config.py
backend/src/presentation/web_api/routes/: probabilities_router.py  race_router.py  runner_router.py  schemas.py  simulate_router.py
backend/tests/: conftest.py
backend/tests/unit/: test_db.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  test.html
mobile/: README.MD  build.gradle.kts  settings.gradle.kts
nginx/: http.conf  https.conf
(+80 files in other folders)
